workloads/minecraft/kustomize/i-2t6sqrjy/nginx/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: nginx-i-2t6sqrjy-deployment
  labels:
    app: nginx-i-2t6sqrjy-deployment

spec:
  replicas: 1

  selector:
    matchLabels:
      app: nginx-i-2t6sqrjy-pod

  template:
    metadata:
      labels:
        app: nginx-i-2t6sqrjy-pod

    spec:
      containers:
        - name: nginx
          image: nginx:alpine

          ports:
            - containerPort: 80
              name: nginx-http

          volumeMounts:
            - name: html
              mountPath: /usr/share/nginx/html

            - name: nginx-config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf

      volumes:
        - name: html
          persistentVolumeClaim:
            claimName: nginx-i-2t6sqrjy-data

        - name: nginx-config
          configMap:
            name: nginx-config-i-2t6sqrjy
