workloads/minecraft/kustomize/i-2t6sqrjy/nginx/svc.yaml
---
apiVersion: v1
kind: Service

metadata:
  name: nginx-i-2t6sqrjy-svc

spec:
  type: ClusterIP

  selector:
    app: nginx-i-2t6sqrjy-pod

  ports:
    - name: nginx-http
      protocol: TCP
      port: 80
      targetPort: nginx-http
