workloads/minecraft/kustomize/i-2t6sqrjy/nginx/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: nginx-i-2t6sqrjy-http

spec:
  parentRefs:
    - name: primary-gateway
      namespace: envoy-gateway-system
      sectionName: http

  hostnames:
    - mc-i-2t6sqrjy.sidewinder.lan

  rules:
    - backendRefs:
        - name: nginx-i-2t6sqrjy-svc # SVC name (internal IP:PORT).
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: nginx-i-2t6sqrjy-https

spec:
  parentRefs:
    - name: primary-gateway
      namespace: envoy-gateway-system
      sectionName: https

  hostnames:
    - mc-i-2t6sqrjy.sidewinder.lan

  rules:
    - backendRefs:
        - name: nginx-i-2t6sqrjy-svc # SVC name (internal IP:PORT).
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
